--- a/html/Ejercicio 7/Ejercicio 7a.html
+++ b/html/Ejercicio 7/Ejercicio 7a.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
 <html>
+   
+
+
     <body>
-        <h1>Real Madrid</h1>
+        <div style="
+        position: absolute;
+        top: 200px;
+        left: 300px;
+        width:600px;
+        height: 200px;
+        border: 2px solid;
+        border-color: red;">
+        <h1><center> Gran encuentro de Fútbol</center> </h1>
+        <h2><center>Real Madrid vs Barcelona</center></h2>
+
+        <div style="
+        position: absolute;
+        top: 200px;
+        left: 300px;
+        width:300px;
+        height: 500px;
+        border: 2px solid;
+        border-color: red;">
+        <h3>Real Madrid</h3>
         <ul>
             <li>Portero</li>
         
@@ -39,7 +61,16 @@
         <li>Hazard</li>
     </ul>
 </ul>
-    <h1>Barcelona</h1>
+</div>
+<div style="
+        position: absolute;
+        top: 200px;
+        left: 000px;
+        width:300px;
+        height: 500px;
+        border: 2px solid;
+        border-color: red;">
+    <h3>Barcelona</h3>
     <ul>
         <li>Portero</li>
     
