--- a/css/Ejercicio 5/Ejercicio 5.html
+++ b/css/Ejercicio 5/Ejercicio 5.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Ejercicio 5.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Periodico</h1>
-    <h1> Título</h1>
-  <p>
+    <h1 >Periodico</h1>
+    <h1 class="noticias"> Título</h1>
+  <p >
     fkuhasfkdhqeqwpkrhgqerphgwpghqerghqepfhqerghepohwghwetoh
   </p> 
   <img src="richard.jpg" width="100px" height="100px">
-  <h5>pie de foto</h5> 
+  <h5 class="pie">pie de foto</h5> 
   <p>
     irthtijhtohwetòht`qergtehi0`giqe0tgi4yhi0ig¡0egi4rhi035r0hi
   </p>
   <h5> Santiago Vitches</h5>
 
-<h1> Título</h1>
+<h1 class="noticias"> Título</h1>
 
   <p>
     fkuhasfkdhqeqwpkrhgqerphgwpghqerghqepfhqerghepohwghwetoh
   </p> 
   <img src="arturo.jpg" width="100px" height="100px">
-  <h5>pie de foto</h5> 
+  <h5 class="pie">pie de foto</h5> 
   <p>
     irthtijhtohwetòht`qergtehi0`giqe0tgi4yhi0ig¡0egi4rhi035r0hi
   </p>
